<resources>
    <string name="app_name">Chafor</string>
    <string name="fragment_login_hint_email">Email</string>
    <string name="fragment_login_password">Password</string>
    <string name="fragment_login_confirm_password">Confirm Password</string>
    <string name="fragment_login_button_sign_in">Sign In</string>
    <string name="fragment_login_textView_sign_up"><u>Sign Up Here</u></string>
    <string name="fragment_login_textView_forgot_password"><u>Forgot Password</u></string>
    <string name="fragment_register_imageView" />
    <string name="fragment_register_signUp">Sign Up</string>
    <string name="fragment_register_back_button" />
    <string name="fragment_register_email_error_message">Invalid Email</string>
    <string name="fragment_register_mask_password">Mask</string>
    <string name="fragment_register_unmask_password">Unmask</string>
    <string name="actiobar_title">Category</string>
    <string name="actionbar_setting_title">Setting</string>
    <string name="actionbar_searchField_hint">Search...</string>
    <string name="fragment_category_list_view_name">Category 1</string>
    <string name="fragment_category_list_view_quantity">Items</string>
    <string name="fragment_category_list_view_edit"><u>Edit</u></string>
    <string name="fragment_category_insert_dialog">Create a new category</string>
    <string name="fragment_category_insert_dialog_hint">New Category</string>
    <string name="fragment_category_insert_dialog_cancel">Cancel</string>
    <string name="fragment_category_insert_dialog_ok">OK</string>
    <string name="fragment_category_update_dialog_title">Update Category</string>
    <string name="actionbar_select_all">Select All</string>
    <string name="actionbar_delete">Delete</string>
    <string name="label_not_found">Result not found</string>
    <string name="fragment_sub_category_label_no">No</string>
    <string name="fragment_sub_category_label_barcode">Barcode</string>
    <string name="fragment_sub_category_quantity">Qty</string>
    <string name="fragment_sub_category_date">Date</string>
    <string name="fragment_sub_category_label_time">Time</string>
    <string name="fragment_sub_category_insert_dialog_hint_quantity">Quantity</string>
    <string name="fragment_sub_category_insert_dialog_default_quantity">1</string>
    <string name="fragment_sub_category_insert_dialog_hint_barcode">Barcode</string>
    <string name="fragment_sub_category_inset_dialog_label_dialog">Create New Item</string>
    <string name="fragment_setting_label_sound">Scan Sound</string>
    <string name="fragment_setting_label_reminder">Reminder</string>
    <string name="fragment_setting_label_quick_scan">Quick Scan</string>
    <string name="fragment_setting_label_log_out">Log Out</string>
    <string name="fragment_setting_label_default_quantity">default: 10</string>
    <string name="fragment_setting_quick_scan_dialog_label_quick_scan">Quick Scan</string>
    <string name="fragment_setting_quick_scan_dialog_hint_quantity">Default quantity</string>
    <string name="fragment_setting_quick_scan_dialog_label_enable">Enable</string>
    <string name="fragment_sub_category_update_dialog_label_item_in">Item Info</string>
    <string name="fragment_sub_category_update_dialog_label_date">Created Date:</string>
    <string name="fragment_sub_category_existed_dialog_label_reminder">Reminder</string>
    <string name="fragment_sub_category_existed_dialog_reminder_text">This barcode is already existed in others categories!</string>
    <string name="fragment_sub_category_existed_dialog_label_check_box">Don\'t show this message anymore</string>
    <string name="fragment_sub_category_existed_dialog_button_ignore">Continue</string>
    <string name="fragment_sub_category_existed_dialog_button_take_action">Take action</string>
    <string name="fragment_sub_category_take_action_title">Select your option</string>
    <string name="activity_take_action_label_move">Move To There</string>
    <string name="activity_take_action_label_back_to_home">Back to home</string>
    <string name="actionbar_search_hint">Search...</string>
    <string name="label_copyright">© All rights reserved by Chafor</string>
    <string name="activity_sub_category_hint_scan_result">Barcode</string>
    <string name="fragment_setting_label_export">Export File</string>
    <string name="fragment_setting_label_import">Import File</string>
    <string name="fragment_forgot_passoword_label_email">Please enter your email</string>
    <string name="fragment_forgot_password_label_send">Send Verify Code</string>
    <string name="fragment_forgot_password_hint">Email</string>
    <string name="fragment_forgot_password_hint_code">Verify Code</string>
    <string name="fragment_forgot_password_label_verify_code">Please enter your verify code</string>
    <string name="fragment_forgot_password_label_confirm">Confirm</string>
    <string name="fragment_forgot_password_paragraph">Enter your email address and we\'ll send you a verify code to change your password.</string>
    <string name="fragment_forgot_password_reset_password_dialog_label_new_password">New Password</string>
    <string name="fragment_forgot_password_reset_password_dialog_hint_new_password">New Password</string>
    <string name="fragment_forgot_password_reset_password_dialog_hint_confirm_password">Confirm Password</string>
    <string name="fragment_forgot_password_reset_password_dialog_button_submit">Submit</string>
    <string name="fragment_sub_category_scan_quantity">CQ</string>
    <string name="fragment_sub_category_system_quantity">SQ</string>
    <string name="fragment_sub_category_new_record_is_found_reminder_text">This barcode does not existed yet inside this category!</string>
    <string name="fragment_sub_category_new_record_is_found_reminder_create">Create New Record</string>
    <string name="fragment_sub_category_new_record_is_found_reminder_cancel">Cancel</string>
    <string name="fragment_sub_category_update_dialog_label_item_code"><b>Item Code:</b></string>
    <string name="fragment_sub_category_update_dialog_label_system_quantity"><b>System Quantity:</b></string>
    <string name="fragment_sub_category_update_dialog_label_description"><b>Description:</b></string>
    <string name="fragment_sub_category_update_dialog_label_selling_price"><b>Selling Price:</b></string>
    <string name="fragment_sub_category_update_dialog_label_cost_price"><b>Cost Price:</b></string>
    <string name="fragment_sub_category_update_dialog_label_barcode">Barcode:</string>
    <string name="fragment_sub_category_update_dialog_label_quantity">Quantity:</string>
    <string name="activity_home_actionbar_label_home">Home</string>
    <string name="activity_export_category_menu_dialog_label_export_file">Export File</string>
    <string name="activity_export_category_menu_dialog_label_setting">Settings</string>
    <string name="activity_export_category_menu_dialog_label_import_file">Import File</string>
    <string name="export_search_category_list_view_label_category">Category</string>
    <string name="export_search_category_list_view_label_sub_category">Barcode</string>
    <string name="activity_export_category_search_dialog_label_result_not_found">No results found for</string>
    <string name="activity_home_label_import">Import</string>
    <string name="activity_home_label_export">Export</string>
    <string name="activity_export_file_title">File</string>
    <string name="activity_home_expired_dialog_label">Your member activation period has expired! You should renew your member now to ensure continued access to all the features.</string>
    <string name="activity_home_expired_dialog_title">Warning</string>
    <string name="file_insert_dialog_edit_text_label">New File</string>
    <string name="file_update_dialog_edit_text_label">Update File</string>
    <string name="fragment_setting_label_account">My Account</string>
    <string name="activity_user_actionbar_label">My Account</string>
    <string name="activity_user_account_label_staus">Status</string>
    <string name="activity_user_account_active">Unknown</string>
    <string name="activity_user_account_user_package">-</string>
    <string name="activity_user_account_user_last_active_date">-</string>
    <string name="activity_user_account_user_last_expired_date">-</string>
    <string name="activity_user_account_button_contact_us">Contact Us</string>
    <string name="activity_user_account_label_contact_us">For more information regarding your account or renewal account please kindly contact us.</string>
    <string name="activity_contact_us_label_hi">Hi!</string>
    <string name="activity_contact_us_label_hi_2">We are ready to help you.</string>
    <string name="activity_contact_us_label_service_hour">Our service hour is</string>
    <string name="activity_contact_us_service_hour">Monday-Friday (9am - 5pm)</string>
    <string name="activity_contact_us_service_hour_2">Saturday (9am - 1pm)</string>
    <string name="activity_contact_us_label_call_us">Call Us</string>
    <string name="activity_contact_us_label_email_us">Email Us</string>
    <string name="activity_contact_us_title">Contact Us</string>
    <string name="activity_contact_us_phone_number">+6075990885</string>
    <string name="activity_contact_us_email">team@chafor.net</string>
    <string name="notification1">Notification1</string>
    <string name="activity_setting_label_my_info">My Info</string>
    <string name="activity_setting_label_general_setting">General settings</string>
    <string name="activity_setting_label_chafor_info">Chafor info</string>
    <string name="activity_user_account_label_username">-</string>
    <string name="activity_user_account_label_user_email">-</string>
    <string name="fragment_login_device">Device Name</string>
    <string name="activity_setting_label_device_name">Device Name</string>
    <string name="activity_setting_device_name">Device One</string>
    <string name="fragment_setting_device_name_dialog_label_device_name">Device Name</string>
    <string name="fragment_setting_device_name_dialog_hint_device_name">Device Name</string>
    <string name="activity_import_sub_category_filter_dialog_title">Filter</string>
    <string name="activity_import_sub_category_filter_dialog_all">All</string>
    <string name="activity_import_sub_category_filter_dialog_more">More</string>
    <string name="activity_import_sub_category_filter_dialog_less">Less</string>
    <string name="activity_import_sub_category_filter_dialog_balance">Balance</string>
    <string name="activity_import_sub_category_label_status">Status</string>
    <string name="activity_import_sub_category_status_more">M</string>
    <string name="activity_import_sub_category_status_less">L</string>
    <string name="activity_import_sub_category_status_balance">B</string>
    <string name="file_provider_authority" translatable="false">com.jby.com.jby.chafor.fileprovider</string>
    <string name="activity_setting_label_export_file">Export File</string>
    <string name="activity_setting_label_export_csv">.csv</string>
    <string name="activity_setting_label_export_text">.txt</string>
    <string name="activity_export_category_menu_dialog_label_export_csv_file">Csv File</string>
    <string name="activity_export_category_menu_dialog_label_export_text_file">Text file</string>
    <string name="ADMOB_APP_ID">ca-app-pub-1780885889164868~2246411008</string>
    <string name="ADMOB_UNIT_ID">ca-app-pub-1780885889164868/3366430299</string>
    <string name="package_table_dialog_label_feature">Features</string>
    <string name="package_table_dialog_label_trial">Trial</string>
    <string name="package_table_dialog_label_premium">Premium</string>
    <string name="package_table_dialog_label_price">Price</string>
    <string name="package_table_dialog_buy_button">BUY</string>
    <string name="package_table_dialog_trial_price">Free</string>
    <string name="package_table_dialog_premium_price">RM 19.90</string>
</resources>