<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".setting.ContactUsActivity">

    <include
        layout="@layout/actionbar"
        android:id="@+id/activity_contact_us_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="0dp"
        android:padding="10dp"
        android:layout_weight="0.5">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1.5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#000"
            android:fontFamily="@string/serif"
            android:padding="5dp"
            android:text="@string/activity_contact_us_label_hi"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#000"
            android:fontFamily="@string/font_family_condensed"
            android:text="@string/activity_contact_us_label_hi_2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@string/font_family_black"
            android:textColor="#000"
            android:paddingTop="10dp"
            android:textSize="16sp"
            android:text="@string/activity_contact_us_label_service_hour"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@string/font_family_condensed"
            android:textColor="#000"
            android:textSize="16sp"
            android:text="@string/activity_contact_us_service_hour"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@string/font_family_condensed"
            android:textColor="#000"
            android:textSize="16sp"
            android:text="@string/activity_contact_us_service_hour_2"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@string/font_family_black"
            android:textColor="#000"
            android:paddingTop="10dp"
            android:textSize="16sp"
            android:text="@string/activity_contact_us_label_call_us"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@string/font_family_condensed"
            android:textColor="#000"
            android:textSize="18sp"
            android:id="@+id/activity_contact_us_call_us"
            android:text="@string/activity_contact_us_phone_number"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@string/font_family_black"
            android:textColor="#000"
            android:paddingTop="10dp"
            android:textSize="16sp"
            android:text="@string/activity_contact_us_label_email_us"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@string/font_family_condensed"
            android:textColor="#000"
            android:textSize="18sp"
            android:id="@+id/activity_contact_us_email_us"
            android:text="@string/activity_contact_us_email"/>


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:padding="20dp"
            android:text="@string/label_copyright"/>

    </RelativeLayout>

</LinearLayout>
