<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jby.stocktake.login.LoginActivity">

    <include
        layout="@layout/actionbar"
        android:id="@+id/activity_main_layout_action_bar"
        android:layout_height="?actionBarSize"
        android:layout_width="match_parent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="#fafafa"
        android:layout_above="@+id/scanResult"
        android:layout_below="@id/activity_main_layout_action_bar"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/fragment_sub_category_list_view_label"
            android:orientation="horizontal"
            android:visibility="gone"
            android:layout_height="?actionBarSize">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:textColor="#000000"
                android:textStyle="bold"
                android:text="@string/fragment_sub_category_label_no"
                android:gravity="center"
                android:id="@+id/fragment_sub_category_list_view_no"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="#000000"
                android:textStyle="bold"
                android:text="@string/fragment_sub_category_label_barcode"
                android:id="@+id/fragment_sub_category_list_view_barcode"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/fragment_sub_category_quantity"
                android:textColor="#000000"
                android:textStyle="bold"
                android:gravity="center"
                android:id="@+id/fragment_sub_category_list_view_quantity"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:text="@string/fragment_sub_category_date"
                android:textColor="#000000"
                android:gravity="center"
                android:textStyle="bold"
                android:id="@+id/fragment_sub_category_list_view_date"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#000000"
                android:text="@string/fragment_sub_category_label_time"
                android:gravity="center"
                android:textStyle="bold"
                android:id="@+id/fragment_sub_category_list_view_time"/>

        </LinearLayout>

        <com.jby.chafor.others.CustomListView
            android:layout_width="match_parent"
            android:focusable="false"
            android:layout_below="@id/fragment_sub_category_list_view_label"
            android:id="@+id/fragment_sub_category_list_view"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:visibility="gone"
            android:id="@+id/not_found"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:drawableTop="@drawable/not_found_icon"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@string/font_family_condensed"
                android:textStyle="italic"
                android:drawablePadding="15dp"
                android:textSize="18sp"
                android:textColor="#000"
                android:text="@string/label_not_found"/>

        </LinearLayout>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/app_name"
            android:layout_alignParentEnd="true"
            android:layout_margin="25dp"
            android:id="@+id/fragment_sub_category_floating_button"
            android:src="@drawable/fragment_category_floating_button_icon"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_margin="25dp"
            android:contentDescription="@string/app_name"
            android:elevation="15dp"
            android:id="@+id/fragment_sub_category_scan_button"
            android:src="@drawable/activity_sub_category_scanner_icon"/>

    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:id="@+id/scanResult"
        android:focusable="true"
        android:hint="@string/activity_sub_category_hint_scan_result"
        android:padding="5dp"
        android:clickable="false"
        android:background="@drawable/edit_editext_scan_result"
        android:layout_above="@id/adView"
        android:layout_alignParentEnd="true"
        android:labelFor="@+id/scanResult"
        android:inputType="textNoSuggestions"
        android:cursorVisible="false"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ADMOB_UNIT_ID">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
