<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center"
    android:padding="10dp"
    android:background="#80000000"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="#f1f1f1"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:gravity="center"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:fontFamily="@string/font_family_condensed"
            android:id="@+id/fragment_category_insert_dialog_title"
            android:text="@string/fragment_category_insert_dialog"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"
            android:padding="8dp"
            android:maxLines="1"
            android:id="@+id/fragment_category_insert_dialog_edit_text_category"
            android:background="@drawable/fragment_category_edit_edit_text"
            android:layout_marginTop="20dp"
            android:hint="@string/fragment_category_insert_dialog_hint"
            android:imeOptions="actionSend"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:background="#80000000"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="?actionBarSize">



            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="#f1f1f1"
                android:textColor="#80000000"
                android:id="@+id/fragment_category_insert_dialog_button_cancel"
                android:text="@string/fragment_category_insert_dialog_cancel"
                android:layout_weight="1"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#80000000"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="#f1f1f1"
                android:id="@+id/fragment_category_insert_dialog_button_ok"
                android:text="@string/fragment_category_insert_dialog_ok"
                android:textColor="@color/tifanny_blue"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
